--- a/part4/bloglist-backend/package.json
+++ b/part4/bloglist-backend/package.json
@@ -4,24 +4,22 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "test": "jest --verbose"
+        "start": "NODE_ENV=production node index.js",
+        "dev": "NODE_ENV=development nodemon index.js",
+        "test": "NODE_ENV=test jest --verbose --runInBand"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "jest": "^27.2.5",
-        "nodemon": "^2.0.13"
+        "nodemon": "^2.0.13",
+        "supertest": "^6.1.6"
     },
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "mongoose": "^6.0.9"
-    },
-    "jest": {
-        "testEnvironment": "node"
     }
 }
