--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -16,7 +16,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "eslint": "eslint ."
+        "eslint": "eslint .",
+        "cypress:open": "cypress open"
     },
     "eslintConfig": {
         "extends": [
@@ -39,6 +40,7 @@
     "proxy": "http://localhost:3003",
     "devDependencies": {
         "@testing-library/jest-dom": "^5.15.0",
-        "@testing-library/react": "^12.1.2"
+        "@testing-library/react": "^12.1.2",
+        "cypress": "^8.7.0"
     }
 }
