--- a/part9/typescript/package.json
+++ b/part9/typescript/package.json
@@ -4,7 +4,7 @@
     "description": "exercise 9.1-9.7",
     "main": "index.js",
     "scripts": {
-        "ts-node": "ts-node"
+        "calculateBmi": "ts-node -- bmiCalculator.ts"
     },
     "author": "lalit",
     "license": "ISC",
