--- a/part9/typescript/package.json
+++ b/part9/typescript/package.json
@@ -4,7 +4,8 @@
     "description": "exercise 9.1-9.7",
     "main": "index.js",
     "scripts": {
-        "calculateBmi": "ts-node -- bmiCalculator.ts"
+        "calculateBmi": "ts-node -- bmiCalculator.ts",
+        "calculateExercise": "ts-node -- exerciseCalculator.ts"
     },
     "author": "lalit",
     "license": "ISC",
