--- a/part9/typescript/package.json
+++ b/part9/typescript/package.json
@@ -5,12 +5,19 @@
     "main": "index.js",
     "scripts": {
         "calculateBmi": "ts-node -- bmiCalculator.ts",
-        "calculateExercise": "ts-node -- exerciseCalculator.ts"
+        "calculateExercise": "ts-node -- exerciseCalculator.ts",
+        "start": "ts-node index.ts",
+        "dev": "ts-node-dev index.ts"
     },
     "author": "lalit",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.13",
         "@types/node": "^16.11.11",
+        "ts-node-dev": "^1.1.8",
         "tslib": "^2.3.1"
+    },
+    "dependencies": {
+        "express": "^4.17.1"
     }
 }
