--- a/part9/typescript/package.json
+++ b/part9/typescript/package.json
@@ -7,13 +7,17 @@
         "calculateBmi": "ts-node -- bmiCalculator.ts",
         "calculateExercise": "ts-node -- exerciseCalculator.ts",
         "start": "ts-node index.ts",
-        "dev": "ts-node-dev index.ts"
+        "dev": "ts-node-dev index.ts",
+        "lint": "eslint --ext .ts ."
     },
     "author": "lalit",
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.11",
+        "@typescript-eslint/eslint-plugin": "^5.5.0",
+        "@typescript-eslint/parser": "^5.5.0",
+        "eslint": "^8.4.0",
         "ts-node-dev": "^1.1.8",
         "tslib": "^2.3.1"
     },
