--- a/part9/typescript/.eslintrc
+++ b/part9/typescript/.eslintrc
@@ -11,6 +11,7 @@
     },
     "rules": {
         "@typescript-eslint/semi": ["error"],
+        "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/restrict-template-expressions": "off",
