--- a/part9/typescript/package.json
+++ b/part9/typescript/package.json
@@ -22,6 +22,7 @@
         "tslib": "^2.3.1"
     },
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1"
     }
 }
